Ajustes bloqueo de botones segun rol